--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,6 +23,7 @@ jobs:
       matrix:
         node-version: [ 14.x ]
     steps:
+      - uses: actions/checkout@v2
       - name: build
         uses: ./github-actions/react-native-expo
         with:
