--- a/github-actions/react-native-expo/action.yaml
+++ b/github-actions/react-native-expo/action.yaml
@@ -24,8 +24,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
       with:
         node-version: ${{ inputs.node-version }}
