--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,6 +2,10 @@ name: Manual Build
 on:
   workflow_dispatch:
     inputs:
+      expo-version:
+         description: 'The Expo CLI version'
+         required: false
+         default: ''
       expo-cli-username:
          description: 'The Expo CLI username'
          required: true
@@ -13,7 +17,7 @@ on:
       platform:
         description: 'android or ios'
         required: true
-        default: ''
+        default: 'all'
 jobs:
   build:
     name: Build
@@ -33,12 +37,40 @@ jobs:
           expo-version: ${{ github.event.inputs.expo-version }} 
           expo-username: ${{ github.event.inputs.expo-cli-username }} 
           expo-password: ${{ github.event.inputs.expo-cli-password }} 
-      - run: yarn install
+      - name: Deps install
+        run: yarn install
       - name: Build (Android)
-        if: ${{ github.event.inputs.platform }}  == "android"
+        if: ${{ github.event.inputs.platform }}  == "android" || ${{ github.event.inputs.platform }}  == "all"
         run: expo build:${{ github.event.inputs.platform }}  --type app-bundle --config ./app.json
       - name: Build (IOS)
-        if: ${{ github.event.inputs.platform }}  == "ios"
-        run: expo build:${{ github.event.inputs.platform }} 
+        if: ${{ github.event.inputs.platform }}  == "ios" || ${{ github.event.inputs.platform }}  == "all"
+        run: expo build:${{ github.event.inputs.platform }}
+  push-to-playstore:
+    needs: [build]
+    runs-on: macos-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [ 14.x ]
+        java-version: '9.0.4'
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - uses: actions/setup-java@v1.4.3
+        with:
+          java-version: ${{ matrix.java-version }} # The JDK version to make available on the path.
+          java-package: jdk                        # (jre, jdk, or jdk+fx) - defaults to jdk
+          architecture: x64                        # (x64 or x86) - defaults to x64
+      - uses: expo/expo-github-action@v5
+        with:
+          expo-version: ${{ github.event.inputs.expo-version }}
+          expo-username: ${{ secrets.EXPO_CLI_USERNAME }}
+          expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
+      - name: Install deps
+        run: yarn install
+      - name: Upload to Google Play Console
+        run: expo upload:android --latest --key ./services.json
 
 
