--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,7 +52,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [ 14.x ]
-        java-version: '9.0.4'
+        java-version: ['9.0.4']
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
