--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,10 +49,10 @@ jobs:
       - name: Deps install
         run: yarn install
       - name: Build (Android)
-        if: ${{ github.event.inputs.platform  == "android" || github.event.inputs.platform  == "all" }}
-        run: expo build:android  --type app-bundle --config ./app.json
+        if: github.event.inputs.platform  == "android" || github.event.inputs.platform  == "all"
+        run: expo build:android
       - name: Build (IOS)
-        if: ${{ github.event.inputs.platform  == "ios" || github.event.inputs.platform  == "all" }}
+        if: github.event.inputs.platform  == "ios" || github.event.inputs.platform  == "all"
         run: expo build:ios
   # push-to-playstore:
   #   needs: [build]
