--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,10 +50,10 @@ jobs:
         run: yarn install
       - name: Build (Android)
         if: github.event.inputs.platform  == 'android' || github.event.inputs.platform  == 'all'
-        run: expo build:android
+        run: expo build:android --config ./app.json
       - name: Build (IOS)
         if: github.event.inputs.platform  == 'ios' || github.event.inputs.platform  == 'all'
-        run: expo build:ios
+        run: expo build:ios --config app.json
   # push-to-playstore:
   #   needs: [build]
   #   runs-on: macos-latest
